--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
                 <form action="#" class="chat-form">
                     <textarea placeholder="Message..." class="message-input"></textarea>
                     <div class="chat-controls">
-                       <button><i class="fa-sharp fa-regular fa-face-smile" style="color: #000000;"></i></button>
-                       <button><i class="fa-regular fa-arrow-up" style="color: #000000;"></i></button>
+                       <button><i class="fa-regular fa-face-smile" style="color: #000000;"></i></button>
+                       <button><i class="fa-solid fa-link"></i></button>
+                      <button><i class="fa-solid fa-arrow-up" style="color: #000000;"></i></button>
                      </div>
                 </form>
             </div>
