--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
                 </div>
             </form>
         </div>
-
-
     </div>
+
+
+<script src="app.js"></script>
+
 </body>
 
 </html>
